--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="flasks">Flasks</string>
     <string name="info">Info</string>
     <string name="about">About</string>
+    <string name="toolbar">toolbar</string>
 </resources>
